manifests/grafana/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: ${cluster_base_domain}
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /grafana
